// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Header container should match the snapshot when the user is not logged in 1`] = `
<header
  className="Header"
>
  <div
    className="user-links"
  >
    <p>
      Hello, 
      shannon
    </p>
    <Link
      className="favorites-link"
      replace={false}
      to="/favorites"
    >
      View Favorites
    </Link>
    <Link
      className="logout-link"
      onClick={[Function]}
      replace={false}
      to="/"
    >
      Log Out
    </Link>
  </div>
</header>
`;

exports[`Header Header container should match the snapshot when the user is not logged in 2`] = `
<header
  className="Header"
>
  <div
    className="user-links"
  >
    <Link
      replace={false}
      to="/sign-up"
    >
      Sign Up
    </Link>
    <Link
      replace={false}
      to="/login"
    >
      Log In
    </Link>
    <p>
      Log in to view your favorited movies.
    </p>
  </div>
</header>
`;
